2014-04-15  Martin Reiche  <reiche.stud@googlemail.com>

	* lib/runningStat.m: Does the statistics only if enough (more than
	2) factor levels are available.

	* func/ssplot.m (ssplot): Fixed a bug for overlapping legend and
	erp plot.

	* func/singleERP.m (singleERP): Implemented changes for customizable
	y-Axis scaling.

	* func/plot_erp.m (SubplotCallback): Implemented changes for customizable
	y-Axis scaling.

	* func/getMax.m (getMax): Implemented changes for customizable
	y-Axis scaling.

	* config.m: Added Options to predefine limits of y-Axis for ERP
	and Bar plots. Leaving them empty will fall back to the automatic
	scaling function.

2014-04-08  Martin Reiche  <reiche.stud@googlemail.com>

	* lib/trendtest.m: Implemented additional output argument holding
	the correlation coefficient for the relationship of the mean data
	and the model coefficients. Is later used to color-code the
	significance bars.

	* lib/subplotERP.m: Implemented changes for single subject ERP
	plotting.

	* lib/runningStat.m: Implemented changes for directional
	color-coding of significance bars of point-wise statistics.

	* lib/drawSig.m: Implemented changes for directional
	color-coding of significance bars of point-wise statistics. If a
	linear trend test is performed the color bars indicating a
	significant trend are now color coded. Red if a positive
	correlation of the mean data and the linear model is at hand and
	blue if the correlation is negative.

	* func/ssplot.m: Added. New function which allows to plot the
	single subject ERPs of one stimulus type within one plot. Can be
	called with a button labelled 'Single Subjects' in the single
	(clicked) ERP plots.

	* lib/getDisp.m: Replaced functions in order to work without
	vec2mat which is only available in the Communication System
	Toolbox.

	* lib/distinct_color.m: Changed order of output colors in a more
	plausible way.

	* func/singleERP.m: Implemented changes for single subject ERP
	plotting.
